# gitolith

./: .gitmodules  Cargo.toml
benches/: bench.rs
src/: lib.rs  main.rs
src/cache/: mod.rs
src/git/: mod.rs  schema.sql
src/regex/: mod.rs
src/search/: mod.rs  optimize.rs  regex.rs  regex2.rs
src/shard/: builder.rs  cached_file.rs  content.rs  docs.rs  file.rs  mod.rs  regex.rs  suffix.rs
src/shard/cached/: mod.rs
src/strcmp/: mod.rs
