[package]
name = "gitserver3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.12", features = ["derive"]}
itertools = "0.10.3"
regex = "1.6.0"
regex-syntax = "0.6" 
suffix = { path = "./vendor/suffix" }
walkdir = "2.3.2"
thiserror = "1.0.31"
memmap2 = "0.5.5"
derive_more = "0.99.17"
anyhow = "1.0.58"
bitvec = "1.0.1"
stretto = "0.6.2"
bytefmt = "0.1.7"
fnv = "1.0.7"
git2 = { version = "0.15", features = ["vendored-libgit2"]}
radsort = "0.1.0"
dpc-pariter = "0.5.1"

[profile.release]
debug = true

[dev-dependencies]
tempfile = "3.3.0"
criterion = "0.3"
# debug = true


[[bench]]
name = "bench"
harness = false
